# gtk-mac-integration

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  accel_map  acinclude.m4  autogen.sh  configure.ac  gtk-mac-integration.doap  gtk-macmenu.c  ige-mac-menu.c  sync-menu.c  sync-menu.h  test-menu.c
bindings/: Makefile.am
bindings/python/: .gitignore  Makefile.am  __init__.py  igemacintegration-module.c  igemacintegration.override  igemacmenu.override  test-integration.py  test-introspection.py
bindings/python/gtk3_osxapplication/: Makefile.am  gtk_osxapplication-module.c  gtk_osxapplication.override  test-integration.py
bindings/python/gtk_osxapplication/: Makefile.am  __init__.py  gtk_osxapplication.c  gtk_osxapplication.override  gtkosx_application.override  test-integration.py
bindings/python/gtkmacintegration/: Makefile.am  __init__.py  gtkmacintegration-module.c  gtkmacintegration.override
bindings/python/gtkosx_application/: Makefile.am  gtkosx_application-module.c  gtkosx_application.override
bindings/python/gtkosxapplication/: Makefile.am  gtk_osxapplication-module.c
bindings/python/igemacintegration/: Makefile.am  igemacintegration-module.c  igemacintegration.override
bundle/: Info.plist  launcher.sh  test-integration.bundle
data/: .gitignore  Makefile.am  gtk-mac-integration-gtk2.pc.in  gtk-mac-integration-gtk3.pc.in  gtk-mac-integration.pc.in  ige-mac-integration.pc.in  ige-mac-menu.pc.in  template_accel_map
docs/: GtkosxApplication.html  Makefile.am  api-index-full.html  ch01.html  deprecated-api-index.html  gtk-mac-integration-gtkosx-image.html  index.html  object-tree.html
docs/reference/: Makefile.am  gtk-mac-integration-docs.sgml  gtk-mac-integration-docs.xml  gtk-mac-integration-sections.txt  gtk-mac-integration.types  ige-mac-integration-docs.sgml
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  lv_LV.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+7 more)
src/: .gitignore  GNSMenuBar.c  GNSMenuBar.h  GNSMenuDelegate.c  GNSMenuDelegate.h  GNSMenuItem.c  GNSMenuItem.h  GtkApplicationDelegate.c  GtkApplicationDelegate.h  GtkApplicationNotify.c  GtkApplicationNotify.h  Makefile.am  addedui.xml  cocoa_menu.c  cocoa_menu.h  cocoa_menu_item.c  cocoa_menu_item.h  getlabel.c  getlabel.h  gtk-mac-bundle.c  gtk-mac-bundle.h  gtk-mac-dock.c  gtk-mac-dock.h  gtk-mac-image-utils.c  gtk-mac-image-utils.h  gtk-mac-integration.h  gtk-mac-menu.c  gtk-mac-menu.h  gtk-mac-private.h  gtkapplication.c  gtkapplication.h  gtkapplication_quartz.c  gtkapplicationprivate.h  gtkosx-image.c  gtkosx-image.h  gtkosxapplication.c  gtkosxapplication.h  gtkosxapplication_quartz.c  gtkosxapplicationprivate.h  ige-mac-bundle.c  (+12 more)
strings/: GtkMacApplication.strings.en  GtkMacApplication.strings.es  GtkMacApplication.strings.it  GtkMacApplication.strings.ja  GtkMacApplication.strings.nb  GtkMacApplication.strings.pt  GtkMacApplication.strings.sk  GtkMacApplication.strings.sv  GtkOSXApplication.strings.ca  GtkOSXApplication.strings.cs  GtkOSXApplication.strings.da  GtkOSXApplication.strings.de  GtkOSXApplication.strings.en  GtkOSXApplication.strings.es  GtkOSXApplication.strings.eu  GtkOSXApplication.strings.fa  GtkOSXApplication.strings.fi  GtkOSXApplication.strings.fr  GtkOSXApplication.strings.he  GtkOSXApplication.strings.hu  GtkOSXApplication.strings.it  GtkOSXApplication.strings.ja  GtkOSXApplication.strings.ko  GtkOSXApplication.strings.lt  GtkOSXApplication.strings.lv_LV  GtkOSXApplication.strings.nb  GtkOSXApplication.strings.nl  GtkOSXApplication.strings.pl  GtkOSXApplication.strings.pt  GtkOSXApplication.strings.ro  GtkOSXApplication.strings.ru  GtkOSXApplication.strings.sk  GtkOSXApplication.strings.sv  GtkOSXApplication.strings.tr  GtkOSXApplication.strings.uk  GtkOSXApplication.strings.vi  GtkOSXApplication.strings.zh_CN  GtkOSXApplication.strings.zh_TW  GtkosxApplication.strings.cs  GtkosxApplication.strings.da  (+11 more)
